tests/baselines/reference/privateNamesUnique-2.errors.txt
tests/cases/conformance/classes/members/privateNames/a.ts(4,15): error TS2339: Property '#x' does not exist on type 'Foo'.
tests/cases/conformance/classes/members/privateNames/a.ts(4,15): error TS18014: The property '#x' cannot be accessed on type 'Foo' within this class because it is shadowed by another private identifier with the same spelling.


==== tests/cases/conformance/classes/members/privateNames/a.ts (2 errors) ====
    export class Foo {
        #x;
        copy(other: import("./b").Foo) {
            other.#x; // error
                  ~~
!!! error TS2339: Property '#x' does not exist on type 'Foo'.
                  ~~
!!! error TS18014: The property '#x' cannot be accessed on type 'Foo' within this class because it is shadowed by another private identifier with the same spelling.
!!! related TS18017 tests/cases/conformance/classes/members/privateNames/a.ts:2:5: The shadowing declaration of '#x' is defined here
!!! related TS18018 /.src/tests/cases/conformance/classes/members/privateNames/b.ts:2:5: The declaration of '#x' that you probably intended to use is defined here
        }
    }
        
==== tests/cases/conformance/classes/members/privateNames/b.ts (0 errors) ====
    export class Foo {
        #x;
    }
    
==== tests/cases/conformance/classes/members/privateNames/main.ts (0 errors) ====
    import { Foo as A } from "./a";
    import { Foo as B } from "./b";
    
    const a = new A();
    const b = new B();
    a.copy(b); // error
    